--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,6 +6,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 	 <link rel="stylesheet" href="{% static 'css/style.css' %}">  
   <title>Sign in</title>
      <link rel="stylesheet" href="style.css">
