--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html lang=en>
+{% extends 'basic.html' %}
+<!--<!DOCTYPE html>-->
+<!--<html lang=en>-->
 
-<head>
-	<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--<head>-->
+	<!--&lt;!&ndash; Required meta tags &ndash;&gt;-->
+    <!--<meta charset="utf-8">-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+	<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 
-</head>
+<!--</head>-->
 
-<body>
+{% block body %}
 {% include 'snippets/base_css.html' %}
 {% include 'snippets/header.html' %}
 
@@ -29,7 +30,7 @@
 
 {% include 'snippets/footer.html' %}
 
-</body>
+{% endblock %}
 
 
 </html>
