--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,13 +1,15 @@
 {% load crispy_forms_tags %}
+{% load static %}
 <html>
 
 <head>
+  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <link rel="stylesheet" href="loginsignupstyle.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <title>Sign in</title>
-   {% load static %}
+
         <link rel="stylesheet" href="{% static 'css/stylelogin.css' %}">
 </head>
 
