--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -32,16 +32,16 @@
                       <a class="nav-link" href="/index">HOME </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#about-us">ABOUT US</a>
+                      <a class="nav-link" href="/about_us">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#services">SERVICES</a>
+                      <a class="nav-link" href="/services">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#doctors">DOCTORS</a>
+                        <a class="nav-link" href="/specialist">DOCTORS</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
+                      <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
                     </li>
                       <li class="nav-item">
                       <a class="nav-link" href="/profile">Profile</a>
@@ -50,28 +50,28 @@
                       <a class="nav-link" href="/logout">Logout{{user.username}}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#social-media">CONTACT</a>
+                        <a class="nav-link" href="/contact">CONTACT</a>
                       </li>
                       {%else%}
-                      <a class="nav-link" href="index.html">HOME </a>
+                      <a class="nav-link" href="/index.html">HOME </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#about-us">ABOUT US</a>
+                      <a class="nav-link" href="/about_us">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#services">SERVICES</a>
+                      <a class="nav-link" href="/services">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#doctors">DOCTORS</a>
+                        <a class="nav-link" href="/specialist">DOCTORS</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
+                      <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
                     </li>
                       <li class="nav-item">
                       <a class="nav-link" href="#user-profile">ACCOUNT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#social-media">CONTACT</a>
+                        <a class="nav-link" href="/contact">CONTACT</a>
                       </li>
                       {%endif%}
                       <!--<nav class="navbar navbar-white">-->
