--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -5,17 +5,40 @@
   <div class="container testi">
     <h1 class="title text-center">WHAT OUR USERS SAY?</h1>
     <div class="row offset-1">
-      <div class="col-md-5 testimonials">
-        <p>Thanks for your easy and friendly webpage. It led us to predict my symptoms at an early stage.</p>
-         <img src = "{% static 'images/testi_01.png' %}" />
-        <p class="user-details"><b>Bishal Adhikari</b><br>Manager of Racer</br></p>
+
+
+
+    <section class="section">
+        <div class="container">
+
+            <article class="media">
+                <div class="media-content">
+                    <div class="content">
+                        <a href="{% url 'add' %}">Add new entry</a>
+                    </div>
+                </div>
+            </article>
+            {% for i in ent %}
+            <article class="media">
+                <div class="media-content">
+                    <div class="content">
+                        <p>
+                            <strong>{{i.date_posted}}</strong>
+                            <br> {{i.text}}
+                        </p>
+                    </div>
+                </div>
+            </article>
+            {% endfor %}
+
         </div>
-        <div class="col-md-5 testimonials">
-          <p>Thankyou for the detailed appointment information of doctors, it helped me reach on time.</p>
-          <img src = "{% static 'images/testi_02.png' %}" />
-          <p class="user-details"><b>Susan Shrestha</b><br>Worker at XYZ ltd.</br></p>
-          </div>
-    </div>
-    </div>
+
     </section>
+
+    <footer class="footer">
+    </footer>
+</div>
+</div>
+    </section>
+
 {% endblock %}
