--- a/templates/add.html
+++ b/templates/add.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'basic.html' %}
+{% block body %}
+
+    <section class="section">
+        <div class="container">
+        <form method="post" action="{% url 'add' %}">
+            {% csrf_token %}
+            <div class="field">
+                <div class="control">
+                    {{form.text}}
+
+                </div>
+            </div>
+
+            <div class="field is-grouped is-grouped-right">
+                <div class="control">
+                    <button class="button is-link">Submit</button>
+                </div>
+            </div>
+        </form>
+        </div>
+
+    </section>
+    <footer class="footer">
+    </footer>
+{% endblock %}
