--- a/templates/basic.html
+++ b/templates/basic.html
@@ -71,7 +71,7 @@
       <input class="form-control mr-sm-2" type="search" name="query" id="query" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 
-    </form>
+    </form><br>
 
                       <!--<nav class="navbar navbar-white">-->
   <!--<form class="form-inline">-->
