--- a/templates/register.html
+++ b/templates/register.html
@@ -19,12 +19,12 @@
           <input class="pass" type="password" align="center" placeholder="Password">
           <input class="pass" type="password" align="center" placeholder="Repeat Password">
           <p>SignUp As</p>
-          <label class="labelas">A Doctor
-            <input type="radio" align="center">
-          </label>
-          <label class="labelas">A Patient
-            <input type="radio" align="center">
-          </label>
+<!--          <label class="labelas">A Doctor-->
+<!--            <input type="radio" align="center">-->
+<!--          </label>-->
+<!--          <label class="labelas">A Patient-->
+<!--            <input type="radio" align="center">-->
+<!--          </label>-->
           
           <a class="submit" href="/login.html" align="center">Sign Up</a>
           <p class="forgot" align="center"><a href="password_reset_form.html/ ">Already A Member? Login Here!</p>
