--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,8 @@ body
 {
     background-image: url('/static/images/service-bg.png');
     padding: 80px 0;
-
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .service-img{
     width: 100px;
@@ -73,6 +74,7 @@ body
 }
 .services p{
     color: white;
+    font-size: 20px;
 }
 .title::before{
     content: '';
@@ -112,9 +114,9 @@ body
 }
 
 .doctors-img{
-    width: 50px;
+    width: 150px;
     margin-top: 20px;
-    height: 50px;;
+    height: 50px;
 }
 /*.img {
     vertical-align: middle;
@@ -162,8 +164,9 @@ body
 #about-us
 {
     background: #f8f9fa;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
     padding-top: 45px;
+    margin-bottom: 10px;
 }
 .about-title{
     font-size: 40px;
@@ -172,9 +175,15 @@ body
 }
 #about-us ul li{
     margin: 10px 0;
+    font-size: 22px;
 }
 #about-us ul{
     margin-left: 20px;
+}
+.about-us-img{
+height: 333px;
+width: 570px;
+margin-bottom: 20px;
 }
 /*----testimonials----*/
 #testimonials{
