--- a/static/css/stylelogin.css
+++ b/static/css/stylelogin.css
@@ -11,118 +11,51 @@ body {
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
-
 .sign {
+    font-size: 32px;
     padding-top: 35px;
     color: rgb(98, 59, 240);
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
-    font-size: 23px;
 }
-
-.un {
-width: 76%;
-color: rgb(38, 50, 56);
-font-weight: 700;
-font-size: 14px;
-letter-spacing: 1px;
-background: rgba(136, 126, 126, 0.04);
-padding: 10px 20px;
-border: none;
-border-radius: 20px;
-outline: none;
-box-sizing: border-box;
-border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
-margin-left: 46px;
-text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
+.form-group [type:input]{
+display: inline;
 }
-
 form.form1 {
-    padding-top: 0px;
-    width: 400px;
+    padding: 0px 50px;
+    width: 800px;
     height: 300px;
 }
 
-.pass {
-        width: 76%;
-color: rgb(38, 50, 56);
-font-weight: 700;
-font-size: 14px;
-letter-spacing: 1px;
-background: rgba(136, 126, 126, 0.04);
-padding: 10px 20px;
-border: none;
-border-radius: 20px;
-outline: none;
-box-sizing: border-box;
-border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
-margin-left: 46px;
-text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
-}
-
 .form1 p {
-    width: 76%;
     color: rgb(38, 50, 56);
-    font-weight: 700;
+    font-weight: 600;
     font-size: 14px;
-    letter-spacing: 1px;
-    margin-top: 3px;
-    margin-left: 46px;
-    text-align: center;
     font-family: 'Ubuntu', sans-serif;
+    margin: 5px 0px;
+    margin-bottom: 12px;
     }
-.labelas{
-    margin-top: 3px;
-    margin-left: 80px;
-    text-align: center;
-    color: rgb(38, 50, 56);
-    font-family: 'Ubuntu', sans-serif;
+
+.btn {
     cursor: pointer;
-    line-height: 60px;
-
-}
-
-
-.un:focus, .pass:focus {
-    border: 2px solid rgba(0, 0, 0, 0.18) !important;
-
-}
-
-
-.submit {
-  cursor: pointer;
-  border-radius: 5em;
+    border-radius: 5em;
     color: #fff;
     background: linear-gradient(to right,#2895f1,#0060b1);
-    border: 0;
+    border: 0px;
     font-family: 'Ubuntu', sans-serif;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    margin-left: 35%;
+    padding: 10px 40px;
     font-size: 16px;
-
+    margin-bottom: 10px;
 }
-
-.forgot {
-    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-    color: rgb(210, 195, 252);
-    padding-top: 30px;
-
+.btn .btn-outline-info:hover{
+    font-size: 18px;
 }
 
 a {
-    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-    color: #E1BEE7;
-    text-decoration: none
+     color: rgb(98, 59, 240);
+    text-decoration: none;
+    outline: none;
 }
 
 @media (max-width: 600px) {
