--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -3,8 +3,7 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
-  <link rel="stylesheet" href="loginsignupstyle.css">
+  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico.png' %}"/>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -16,28 +15,17 @@
 <body>
   <div class="main">
     <p class="sign" align="center">Sign In</p>
-    <form class="form1" method="POST">
+    <form class="form1" style="width=300px" method="POST">
       {%csrf_token%}
 
         {{ form.as_p }}
-   
-      <p>SignIn As</p>
-      <label class="labelas">A Doctor
-        <input type="radio" align="center">
-      </label>
-      <label class="labelas">A Patient
-        <input type="radio" align="center">
-      </label>
-      <div class="form-group">
         <button class= "btn btn-outline-info" type="submit">
           Login
         </button>
-        
-      </div>
-      <p class="forgot" align="center"><a href="{% url 'password_reset' %}">Forgot Password?</p>
-    </form>
-    </div>
-     
+      <p class="forgot"><a href="{% url 'password_reset' %}">Forgot Password? </a> </p>
+
+     </form>
+     </div>
 </body>
 
 </html>
