--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,45 +3,33 @@
 <html>
 
     <head>
-        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
-      <link rel="stylesheet" href="loginsignupstyle.css">
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico.png' %}"/>
       <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-      <title>Sign in</title>
-
+      <title>Register Here</title>
         <link rel="stylesheet" href="{% static 'css/stylelogin.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     </head>
-    
     <body>
       <div class="main">
         <p class="sign" align="center">Sign Up</p>
-        <form class="form1" method="POST">
+        <form class="form1"  method="POST">
           {%csrf_token%}
-          <fieldset class="form-group">
-        <legend class="border-bottom mb-4">
-          Join Today
-        </legend>
         {{ form | crispy }}
-        
-      </fieldset>
  
-          <p>SignUp As</p>
-          <label class="labelas">A Doctor
-            <input type="radio" align="center">
-          </label>
-          <label class="labelas">A Patient
-            <input type="radio" align="center">
-          </label>
-          
-                <div class="form-group">
+<!--          <p>SignUp As</p>-->
+<!--          <label class="labelas">A Doctor-->
+<!--            <input type="radio" align="center">-->
+<!--          </label>-->
+<!--          <label class="labelas">A Patient-->
+<!--            <input type="radio" align="center">-->
+<!--          </label>-->
+
+
         <button class= "btn btn-outline-info" type="submit">
           Sign Up
         </button>
-        
-      </div>
-          <p class="forgot" align="center"><a href="/login">Already A Member? Login Here!</p>
+            <p class="forgot"><a href="/login">Already A Member? Login Here! </a></p>
         </form>
         </div>
          
