--- a/templates/account.html
+++ b/templates/account.html
@@ -6,11 +6,11 @@
     <h1 class="title">MEMBERSHIP DETAILS</h1>
       <div class="account text-center">
         <h4>New Member?</h4>
-        <button type="button" class="btn btn-primary"><a href="/register"><font color="white"> Register Here</font></a></button>
+        <button type="button" class="btn btn-primary"><a href="/users/register"><font color="white"> Register Here</font></a></button>
 
       </div>
     <h4>Already A Member?</h4>
-    <button type="button" class="btn btn-primary"><a href="/login"><font color="white"> Login Here</font></a></button></div>
+    <button type="button" class="btn btn-primary"><a href="/users/login"><font color="white"> Login Here</font></a></button></div>
 
   </div>
 </section>
