--- a/templates/basic.html
+++ b/templates/basic.html
@@ -21,30 +21,26 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      {% if user.is_authenticated %}
+
+                     {% if user.is_authenticated %}
                       <a class="nav-link" href="/index">HOME </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/about_us">ABOUT US</a>
+                      <a class="nav-link" href="{% url 'disease' %}">Search Disease</a>
                     </li>
+
                     <li class="nav-item">
-                      <a class="nav-link" href="/services">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/specialist">DOCTORS</a>
+                        <a class="nav-link" href="/specialist">Search Doctors</a>
                       </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
-                    </li>
+                   <li class="nav-item">
+                    <a class="nav-link" href="{% url 'feedback' %}">Feedback</a>
+                   </li>
                       <li class="nav-item">
-                      <a class="nav-link" href="/accounts/profile">Profile</a>
+                      <a class="nav-link" href="/profile">Profile</a>
                     </li>
                                           <li class="nav-item">
                       <a class="nav-link" href="/logout">Logout{{user.username}}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="n/av-link" href="contact">CONTACT</a>
-                      </li>
                       {%else%}
                       <a class="nav-link" href="/index">HOME </a>
                     </li>
