--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -28,30 +28,26 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      {% if user.is_authenticated %}
+                         {% if user.is_authenticated %}
                       <a class="nav-link" href="/index">HOME </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/about_us">ABOUT US</a>
+                      <a class="nav-link" href="{% url 'disease' %}">Search Disease</a>
                     </li>
+
                     <li class="nav-item">
-                      <a class="nav-link" href="/services">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/specialist">DOCTORS</a>
+                        <a class="nav-link" href="/specialist">Search Doctors</a>
                       </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
-                    </li>
+                   <li class="nav-item">
+                    <a class="nav-link" href="{% url 'feedback' %}">Feedback</a>
+                   </li>
                       <li class="nav-item">
                       <a class="nav-link" href="/profile">Profile</a>
                     </li>
                                           <li class="nav-item">
                       <a class="nav-link" href="/logout">Logout{{user.username}}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">CONTACT</a>
-                      </li>
+
                       {%else%}
                       <a class="nav-link" href="/index.html">HOME </a>
                     </li>
@@ -112,17 +108,7 @@
 
 	</form>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <form action="{% url 'review' %}"  method="post" class="form-inline">
-                {% csrf_token %}
-            <h2>Write Your Review</h2>
-            <input type="text" name="query" placeholder="Type Here">
-            <input type="submit" value="Submit">
-</form>
-        </div>
-    </div>
+
 </body>
 
 {% endblock content %}
