--- a/static/css/mainpagestyle.css
+++ b/static/css/mainpagestyle.css
@@ -7,85 +7,7 @@ body {
     background-image: linear-gradient(to right,#2895f1,#0060b1);
     font-family: sans-serif;
 }
-/*
-#nav-bar{
-   position: sticky;
-   top: 10;
-   z-index: 10; 
-}
-.navbar{
-    background-image: linear-gradient(to right,#2895f1,#0060b1);
-    padding: 0 !important;
-}
 
-.navbar-nav li{
-    padding: 0 10px;
-}
-.navbar-nav li a{
-    color: white !important;
-    font-weight: 600;
-    float: right;
-    text-align: left;
-    border-bottom: .20rem solid transparent;
-}
-.fa-bars{
-    color: white;
-    font-size: 30px !important;
-}
-.navbar-toggler{
-    outline: none !important;
-}
-.navbar-nav .nav-link:hover,
-.navbar-nav .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255);
-}
-*/
-
-.contents
-{
-	margin-top: 5px;
-	padding:50px;
-	background-color:rgb(255, 255, 255);
-	
-}
-
-.cover-container {
-    max-width: 60em;
-  }
-  
-  /*
- * Header
- */
-.masthead {
-    margin-bottom: 2rem;
-  }
-  
-  .masthead-brand {
-    margin-bottom: 0;
-  }
-  
-  .nav-masthead .nav-link {
-    padding: .25rem 0;
-    font-weight: 700;
-    color: rgba(255, 255, 255);
-    background-color: transparent;
-    border-bottom: .25rem solid transparent;
-  }
-  
-  .nav-masthead .nav-link:hover,
-  .nav-masthead .nav-link:focus {
-    border-bottom-color: rgba(255, 255, 255, 0.25);
-  }
-  
-  .nav-masthead .nav-link + .nav-link {
-    margin-left: 3rem;
-  }
-  
-  .nav-masthead .active {
-    color: rgb(255, 255, 255);
-    border-bottom-color: rgb(255, 255, 255);
-  }
-  
 /*-------------Title--------------*/
   .title::before{
     content: '';
@@ -203,22 +125,45 @@ body {
 
 
 /*-------Feedback----------*/
-.feedback-text {
-    width: 30%;
-    color: black;
-    letter-spacing: 1px;
-    background: rgba(136, 126, 126, 0.04);
-    padding: 50px 20px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    box-sizing: border-box;
-    border: 2px solid gray;
-    text-align: center;
-    font-family: sans-serif;
-    }
+  #appoint{
+  background: linear-gradient(to right,#2895f1,#0060b1);
+  color: white;
+  font-weight: 600;
+  border-radius: 2em;
+  border: none;
+  padding: 15px 60px;
+  font-size: 24px;
+  margin-bottom: 20px;
+  margin-left: 8px;
+  }
+  #appoint:hover{
+      font-size: 25px;
+  }
+  .form-group input, textarea, #messages{
+  background: #F9F9F9;
+  border: 1px solid #135081;
+  box-sizing: border-box;
+  border-radius: 10px;
+  }
+  .form-group{
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+  }
 
+  .form-container label{
+  display: block;
+  font-family: Century Gothic;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: #3A3A3A;
+  }
 
+  #messages{
+      height: 160px;
+  }
 
  /*
  * Footer
