--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -124,11 +124,13 @@
                }
            </style>
            <div class="container mt-5">
+               <h1 class="title text-center">Personal Information</h1>
                         <div class="row">
+
                           <div class="col-12">
-                            <div class="media">
+                            <div class="media mb-5">
                                 <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                                <div class="media-body">
+                                <div class="media-body mb-4">
                                     <h2 class="account-heading">{{ user.username }}</h2>
                                     <p class="text-secondary">{{ user.email }}</p>
 
@@ -138,7 +140,7 @@
                             <form method ="POST" enctype="multipart/form-data">
                                 {% csrf_token%}
                                 <fieldset class="form-group">
-                                        <h1 class="title text-center">Personal Information</h1>
+
 
                                     {{ u_form | crispy }}
                                     {{ p_form | crispy }}
