--- a/templates/searchdisease.html
+++ b/templates/searchdisease.html
@@ -34,7 +34,7 @@ h4 {
   </style>
 <section id="search_disease" class="py-2">
                       <div class="container">
-                        <h1 class="title text-center">Search Disease</h1>
+                        <h1 class="title text-center">Predict Disease</h1>
                         <div class="row">
                           <div class="col-12">
                             <table class="table table-bordered">
@@ -126,7 +126,7 @@ h4 {
                             </table>
                           </div>
                         </div>
-                          <button id= "search_button"type="button" class="Submit" align="center">Submit</button>
+                          <button id= "search_button"type="button" class="Submit" align="center">Next</button>
                       </div>
                     </section>
 
