--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -85,7 +85,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{speciality.0.name}}</h5>
                 <p class="card-text">{{speciality.0.desc}}</p>
-                <a href="#" class="btn btn-primary">Book an appointment</a>
+                <a href="/specialist/detail/{{speciality.0.id}}" class="btn btn-primary">Book an appointment</a>
             </div>
           </div>
        </div>
@@ -98,7 +98,7 @@
             <div class="card-body">
               <h5 class="card-title">{{i.name}}</h5>
               <p class="card-text">{{i.desc}}</p>
-              <a href="#" class="btn btn-primary">Book an appointment</a>
+              <a href="/specialist/detail/{{i.id}}" class="btn btn-primary">Book an appointment</a>
             </div>
           </div>
         </div>
