--- a/templates/basic.html
+++ b/templates/basic.html
@@ -63,11 +63,11 @@
                         <a class="nav-link" href="/contact">CONTACT</a>
                       </li>
                       {%endif%}
-                      <form method="get" action="/specialist/search" class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" name="query" id="query" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+<!--                      <form method="get" action="/specialist/search" class="form-inline my-2 my-lg-0">-->
+<!--      <input class="form-control mr-sm-2" type="search" name="query" id="query" placeholder="Search" aria-label="Search">-->
+<!--      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
 
-    </form><br>
+<!--    </form><br>-->
 
                       <!--<nav class="navbar navbar-white">-->
   <!--<form class="form-inline">-->
