--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -43,8 +43,8 @@ color: #3A3A3A;
   color: #3A3A3A;
   }
 
-  #messages{
-      height: 160px;
+  textarea.form-control{
+  border: 1px solid #135081;
   }
 </style>
 
