--- a/specialist/templates/specialist/doctor_profile_detail.html
+++ b/specialist/templates/specialist/doctor_profile_detail.html
@@ -1,19 +1,53 @@
 {% extends 'basic.html' %}
 {% block body %}
-<div class="detail">
-<h1>Doctor's Detail</h1>
+<style>
+    .profile-tab label{
+        font-weight: 600;
+        float: left;
+    }
+    .profile-tab span{
+          float: right;
+          font-weight: 600;
+          color: #0062cc;
+    }
+</style>
+<div class="detail text-center">
+     <h1 class="title text-center">Doctor's Detail</h1>
 
-    <div class="image-side">
-<img src="/images/{{object.identification_image}}" width="500px" height="500px" >
+    <div class="image-side mb-4">
+<img src="/images/{{object.identification_image}}" width="450px" height="300px" >
 </div>
-<h2>
-Doctor's name:{{object.name}}<br>
-Location:{{object.location}}<br>
-Fee:{{object.fee}}<br>
-Description:{{object.desc}}<br>
-
-</h2></div>
-
-
+ <div class="profile-tab text-center">
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div class="col-md-5"></div>
+                                    <div class="col-md-2">
+                                        <label>Doctor's name:</label>
+                                        <span>{{object.name}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-5"></div>
+                                    <div class="col-md-2">
+                                        <label>Location:</label>
+                                        <span>{{object.location}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-5"></div>
+                                    <div class="col-md-2">
+                                        <label>Fee:</label>
+                                     <span>{{object.fee}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-5"></div>
+                                    <div class="col-md-2">
+                                        <label>Description:</label>
+                                        <span>{{object.desc}}</span>
+                                    </div>
+                                </div>
+                            </div>
+ </div>
 
 {% endblock %}
