--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -11,34 +11,54 @@
           margin-right: 22px;
             }
             .card-body {
-        <!-- -ms-flex: 1 1 auto;-->
-        <!--flex: 1 1 auto;-->
-        <!--min-height: 180px;-->
-        padding: 1.25rem;
-        height:286px;
-        width:180px;
-}
+                padding: 1.25rem;
+                height: 16rem;
+                width: 18rem;
+            }
+
           .col-md-3 img {
-            width:255px;
-            height:355px;
-}
+            width: 18rem;
+            height: 16rem;
           }
-          body .carousel-indicator li{
-          background-color: blue;
+          .carousel-indicators{
+                bottom:-50px;
           }
-          body .carousel-indicators{
-          bottom: 0;
+          .carousel-indicators > li {
+                border-radius: 50%
+                width: 10px;
+                height: 16px;
+                background-color: #2895f1;
+            }
+          .carousel-item{
+                margin-bottom:50px;
+          }
+          .docbtn{
+              background: linear-gradient(to right,#2895f1,#0060b1);
+              width: 14rem;
+              color: white;
+              font-weight: 600;
+              border-radius: 0.6em;
+              border: none;
+              padding: 10px 40px;
+              font-size: 20px;
+              margin-bottom: 20px;
+              margin-left: 8px;
+              text-decoration: none !important;
+              outline: none;}
+          .docbtn:hover{
+                font-size: 19px;
+                color: white;
           }
           body .carousel-control-prev-icon;
           body .carousel-control-next-icon{
-          background-color: blue;
-          margin-left:10px;
-          padding-left: 5px;
-          padding-right: 5px;
+                background-color: blue;
+                margin-left:10px;
+                padding-left: 5px;
+                padding-right: 5px;
           }
            body .no-padding{
-           padding-left: 0;
-           padding-right: 0;
+               padding-left: 0;
+               padding-right: 0;
            }
 {% endblock %}
 {% block body %}
@@ -57,7 +77,7 @@
         <span class="carousel-control-prev-icon"></span>
     </a>
     <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon" margin left="25"></span>
+        <span class="carousel-control-next-icon"></span>
     </a>
 
       <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -82,10 +102,10 @@
         <div class="col-xs-3 col-sm-3 col-md-3">
           <div class="card" style="width: 18rem;">
             <img src="/images/{{speciality.0.identification_image}}" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{speciality.0.name}}</h5>
                 <p class="card-text">{{speciality.0.desc}}</p>
-                <a href="/specialist/detail/{{speciality.0.id}}" class="btn btn-primary">Book an appointment</a>
+                <a href="/specialist/detail/{{speciality.0.id}}" class="docbtn mt-auto">View details</a>
             </div>
           </div>
        </div>
@@ -95,10 +115,10 @@
         <div class="col-xs-3 col-sm-3 col-md-3">
           <div class="card" style="width: 18rem;">
             <img src="/images/{{i.identification_image}}"  class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">{{i.name}}</h5>
               <p class="card-text">{{i.desc}}</p>
-              <a href="/specialist/detail/{{i.id}}" class="btn btn-primary">Book an appointment</a>
+              <a href="/specialist/detail/{{i.id}}" class="docbtn mt-auto">View details</a>
             </div>
           </div>
         </div>
